Bug 404923 - Previews of task switchers look broken when fractional display scaling is used
Summary: Previews of task switchers look broken when fractional display scaling is used
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: 5.15.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D19544
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2019-02-28 20:06 UTC by Patrick Silva
Modified: 2019-03-06 21:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:
vlad.zahorodnii: ReviewRequest+


Attachments
preview breeze (1.29 MB, image/png)
2019-02-28 20:06 UTC, Patrick Silva
Details
preview grid (1005.86 KB, image/png)
2019-02-28 20:07 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-02-28 20:06:45 UTC
Created attachment 118442 [details]
preview breeze

STEPS TO REPRODUCE
1. Set 1.2 as display scaling factor in system settings > display and monitor and restart plasma
2. search for "task switcher" in the apps launcher and open it
3. under 'Visualization", select any option listed in the dropdown and click preview button

OBSERVED RESULT
Preview looks broken, it's not completely filled, one piece is transparent.
The screenshots explains better.

EXPECTED RESULT
previews are shown correctly.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Comment 1 Patrick Silva 2019-02-28 20:07:21 UTC
Created attachment 118443 [details]
preview grid
Comment 2 Vlad Zahorodnii 2019-03-05 14:54:25 UTC
Hmm, it looks like provided blur/contrast region is not scaled. Though I personally can't reproduce this bug.
Comment 3 David Edmundson 2019-03-06 21:43:07 UTC
Git commit abcf323ab6f343171308231d6d40f65cb2409502 by David Edmundson.
Committed on 06/03/2019 at 21:42.
Pushed by davidedmundson into branch 'master'.

Send blur/background contrast in device pixels

Summary:
A Qt app using Qt scaling will only know the position of windows and all
geometry in logical pixels. Kwin needs everything in device pixels.

This hasn't been a big issue till now as plasma on X doesn't opt in for
Qt scaling. For wayland everything is in the same sane coordinate space.

It can occur in some previews in systemsettings and at some point maybe plasma should use
Qt scaling on X

Test Plan:
Task switcher now blurred the whole area.
Ran plamsa on X with plasma_use_qt_scaling. Kickoff was less corrupted.

Reviewers: #kwin

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D19544

M  +2    -2    src/kwindoweffects.h
M  +6    -2    src/platforms/xcb/kwindoweffects.cpp

https://commits.kde.org/kwindowsystem/abcf323ab6f343171308231d6d40f65cb2409502