Send blur/background contrast in device pixels

Summary:
A Qt app using Qt scaling will only know the position of windows and all
geometry in logical pixels. Kwin needs everything in device pixels.

This hasn't been a big issue till now as plasma on X doesn't opt in for
Qt scaling. For wayland everything is in the same sane coordinate space.

It can occur in some previews in systemsettings and at some point maybe plasma should use
Qt scaling on X

BUG: 404923

Test Plan:
Task switcher now blurred the whole area.
Ran plamsa on X with plasma_use_qt_scaling. Kickoff was less corrupted.

Reviewers: #kwin

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D19544